fixed styles and rearraged.  added embedded youtube on small devices

--- a/css/queries.css
+++ b/css/queries.css
@@ -259,7 +259,7 @@
         padding: 35px;
     }
 
-    .rsvp {
+    #instagram {
         padding-top: 170px;
     }
 
